Unqualified host name: (was none), now %q
Login name: was %u, now %l
User's full name: was %U, now %L

Merely having '(add-hook 'before-save-hook 'time-stamp)' in your
Emacs init file does not expose you to this change.  However,
if you set 'time-stamp-format' or 'time-stamp-pattern' with a
file-local variable, you may need to update the value.

** mode-local
*** 'define-overload' is declared obsolete.


* New Modes and Packages in Emacs 27.1

** Tab Bars

+++
*** Tab Bar mode
The new command 'tab-bar-mode' enables the tab bar at the top of each
frame, where you can use tabs to switch between named persistent
window configurations.

The 'C-x t' sequence is the new prefix key for tab-related commands:
'C-x t 2' creates a new tab; 'C-x t 0' deletes the current tab;
'C-x t b' switches to buffer in another tab; 'C-x t f' and 'C-x t C-f'
edit file in another tab; and 'C-TAB' and 'S-C-TAB' switch to the next
or previous tab.  You can also switch between tabs and create/delete
tabs with a mouse.

Tab-related commands are available even when 'tab-bar-mode' is
disabled: by default, they enable 'tab-bar-mode' in that case.

The X resource "tabBar", class "TabBar" enables the tab bar
when its value is "on", "yes" or "1".

The user option 'tab-bar-position' specifies where to show the tab bar.

Read the new Info node "(emacs) Tab Bars" for full description
of all related features.

*** Tab Line mode
The new command 'global-tab-line-mode' enables the tab line above each
window, which you can use to switch buffers in the window.  Selecting
the previous window-local tab is the same as typing 'C-x <LEFT>'
('previous-buffer'), selecting the next tab is the same as 'C-x <RIGHT>'
('next-buffer').  Both commands support a numeric prefix argument as
a repeat count.  Clicking on the plus icon adds a new buffer to the
window-local tab line of buffers.  Using the mouse wheel on the tab
line scrolls tabs.

** fileloop.el lets one setup multifile operations like search&replace.

+++