@@ -438,8 +438,8 @@ Menu items are appended to the common grammar menu.")
   "Major mode for editing Bovine grammars."
   (semantic-grammar-setup-menu bovine-grammar-menu)
   (semantic-install-function-overrides
-   '((grammar-parsetable-builder . bovine-grammar-parsetable-builder)
-     (grammar-setupcode-builder  . bovine-grammar-setupcode-builder))))
+   '((semantic-grammar-parsetable-builder . bovine-grammar-parsetable-builder)
+     (semantic-grammar-setupcode-builder  . bovine-grammar-setupcode-builder))))
 
 (add-to-list 'auto-mode-alist '("\\.by\\'" . bovine-grammar-mode))
 
