@@ -186,8 +186,8 @@ Mark OLDFNALIAS as obsolete, such that the byte compiler
 will throw a warning when it encounters this symbol."
   (defalias oldfnalias newfn)
   (make-obsolete oldfnalias newfn when)
-  (when (and (function-overload-p newfn)
-             (not (overload-obsoleted-by newfn))
+  (when (and (mode-local--function-overload-p newfn)
+             (not (mode-local--overload-obsoleted-by newfn))
              ;; Only throw this warning when byte compiling things.
              (boundp 'byte-compile-current-file)
              byte-compile-current-file
@@ -261,7 +261,7 @@ FUNCTION does not have arguments.  When FUNCTION is entered
 (semantic-alias-obsolete 'define-mode-overload-implementation
                          'define-mode-local-override "23.2")
 
-(defun semantic-install-function-overrides (overrides &optional transient mode)
+(defun semantic-install-function-overrides (overrides &optional transient)
   "Install the function OVERRIDES in the specified environment.
 OVERRIDES must be an alist ((OVERLOAD .  FUNCTION) ...) where OVERLOAD
 is a symbol identifying an overloadable entry, and FUNCTION is the
@@ -282,8 +282,7 @@ later installation should be done in MODE hook."
             (cons (intern (format "semantic-%s" name)) (cdr e)))))
     overrides)
    (list 'constant-flag (not transient)
-         'override-flag t)
-   mode))
+         'override-flag t)))
 
 ;;; User Interrupt handling
 ;;
