@@ -63,9 +63,9 @@ Each tag returned is of the form:
 or
  (\"NAME\" def)
 
-It is an override of 'parse-region and must be installed by the
+It is an override of `semantic-parse-region' and must be installed by the
 function `semantic-install-function-overrides'."
-  (mapcar 'semantic-texi-expand-tag
+  (mapcar #'semantic-texi-expand-tag
           (semantic-texi-parse-headings)))
 
 (defun semantic-texi-parse-changes ()
@@ -451,8 +451,8 @@ that start with that symbol."
   "Set up a buffer for parsing of Texinfo files."
   ;; This will use our parser.
   (semantic-install-function-overrides
-   '((parse-region . semantic-texi-parse-region)
-     (parse-changes . semantic-texi-parse-changes)))
+   '((semantic-parse-region . semantic-texi-parse-region)
+     (semantic-parse-changes . semantic-texi-parse-changes)))
   (setq semantic-parser-name "TEXI"
         ;; Setup a dummy parser table to enable parsing!
         semantic--parse-table t
